syntax = "proto2";

package edu.tigers.sumatra.referee.proto;
option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/engine";

import "ssl_gc_geometry.proto";
import "ssl_gc_common.proto";

message GcState {
    map<string, GcStateTeam> team_state = 1;
    map<string, GcStateAutoRef> auto_ref_state = 2;
    map<string, GcStateTracker> tracker_state = 3;
    optional GcStateTracker tracker_state_gc = 4;
    optional bool ready_to_continue = 5;
}

message GcStateTeam {
    // true: The team is connected
    optional bool connected = 1;

    // true: The team connected via TLS with a verified certificate
    optional bool connection_verified = 2;

    // true: The remote control for the team is connected
    optional bool remote_control_connected = 3;

    // true: The remote control for the team connected via TLS with a verified certificate
    optional bool remote_control_connection_verified = 4;
}

message GcStateAutoRef {
    // true: The autoRef connected via TLS with a verified certificate
    optional bool connection_verified = 1;
}

message GcStateTracker {
    // Name of the source
    optional string source_name = 1;

    // UUID of the source
    optional string uuid = 4;

    // Current ball
    optional Ball ball = 2;

    // Current robots
    repeated Robot robots = 3;
}

message Ball {
    // ball position [m]
    optional Vector3 pos = 1;

    // ball velocity [m/s]
    optional Vector3 vel = 2;
}

message Robot {
    // robot id and team
    optional RobotId id = 1;

    // robot position [m]
    optional Vector2 pos = 2;
}
